--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div class="hr"></div>
             <br>
             <span class="left-margin">Clever © 2024.</span>
-            <span class="right"><a href="">Terms of Secrvice</a></span>
+            <span class="right"><a href="https://mydevfor.github.io/clever-blocked/block.html">Terms of Secrvice</a></span>
            <br>
            <br>
     </div>
