--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
+    <noscript>
+        
     <header>
         <div class="internal-header">
     <div class="fir-left inline-block">
@@ -176,5 +178,6 @@
         <b><p class="text-primary">Teacher Pages</p></b>
         <b><p class="text-primary">FCPS Applications</p></b>
     </div>
+    </noscript>
 </body>
 </html>
